k8s/overlays/k8s-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zed-pkg-public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.zpkg.net
        - api.zpkg.net
      secretName: zed-pkg-public-tls
  rules:
    - host: app.zpkg.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zed-web-server
                port:
                  number: 8080
    - host: api.zpkg.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zed-api-server
                port:
                  number: 8080
